[package]
name = "chime"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
